--- a/css/style.sass
+++ b/css/style.sass
@@ -3,12 +3,15 @@
 
 /* general */
 // $text-theme: #0d47a0
-$text-theme: #0d47a0
-$color-theme: #0d47a0
+$text-theme: #326B80
+//$text-theme: #326B80 // verde azul
+$text-theme: #124880 // verde azul
+$color-theme: #124880
 
 /* navbar */ 
 $bg-navbar: transparent
 $background-navbar-logo: transparent
+$text-navbar: red
 
 /* General CSS */
 *
@@ -102,6 +105,8 @@ header
         padding: 0 auto !important
 .navbar-nav 
     height: 60vh
+.text-navbar
+    color: $text-navbar
 @media screen and (min-width: 768px)
     .navbar
         padding: 0
