--- a/css/style.sass
+++ b/css/style.sass
@@ -298,9 +298,7 @@ header
         padding: 1.875rem
     p 
         padding: 0
-    .blog-subtitle
-        font-size: 0.8em
-
+   
     .card-img-top
         height: 200px
         object-fit: cover
@@ -321,6 +319,31 @@ header
             padding-top: 5rem
             p
                 margin-top: 0
+
+/* Articulo */  
+.article
+    .view
+        height: 60vh
+        img 
+            height: 60vh
+            object-fit: cover
+.texto-articulo
+    position: absolute
+    top: 20vh
+    width: 48vw
+    left: 26vw
+    right: 26vw
+    height: 40vh
+.titulo-texto 
+    font-size: 4em
+
+.articulo-subtitle
+    font-size: 1.5em
+
+.modal 
+    margin: auto
+
+
 
 /* Contacto */ 
 #message
