index img view 40vh tablet

--- a/css/style.sass
+++ b/css/style.sass
@@ -176,6 +176,7 @@ header
     .btn 
         margin-top: 20px   
     img 
+        height: 40vh
         object-fit: cover
 .hr-card
     height: 3px
