--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-/* VARIABLES */
+/*-------------------- VARIABLES --------------------*/
 @import url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
-/* general */
-/* navbar */
-/* General CSS */
+/* General */
+/* Navbar */
+/*-------------- GENERAL CSS --------------*/
 * {
   margin: 0;
   padding: 0;
@@ -36,7 +36,20 @@ h5 {
      object-fit: cover;
 }
 
-/* Colores */
+.fab {
+  padding: 20px 0;
+}
+
+.max-width {
+  max-width: 1000px;
+}
+
+.full-screen {
+  width: 100%;
+  height: 100vh;
+}
+
+/*--------------- COLORES ---------------*/
 .color-theme {
   background-color: #124880;
 }
@@ -65,16 +78,8 @@ h5 {
   background-color: #8ebdef;
 }
 
-.max-width {
-  max-width: 1000px;
-}
-
-.full-screen {
-  width: 100%;
-  height: 100vh;
-}
-
-/* Section */
+/*------------------ SECTION ------------------*/
+/* General Section CSS */
 .section-wrapper {
   margin-top: 160px;
 }
@@ -129,12 +134,14 @@ h5 {
   padding: 30px 0;
 }
 
-/* Logo */
+/*-------------------- LOGO --------------------*/
+/* General Logo CSS */
 .bg-logo {
   background-color: transparent;
 }
 
-/* Navbar */
+/*------------------- NAVBAR -------------------*/
+/* General Navbar CSS */
 header {
   background-color: transparent;
 }
@@ -154,43 +161,6 @@ header {
 
 .text-navbar {
   color: red;
-}
-
-@media screen and (min-width: 768px) {
-  .navbar {
-    padding: 0;
-  }
-  .navbar-nav {
-    height: 75vh;
-  }
-  .nav-item {
-    margin: auto;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .navbar {
-    padding: 0;
-  }
-  .nav-item {
-    width: 160px;
-    height: 70px;
-    text-align: center;
-    font-size: 1em;
-    margin: auto 0;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .nav-item:hover {
-    background-color: #0f3b6a;
-  }
 }
 
 .active {
@@ -213,19 +183,6 @@ header {
   height: 20px;
 }
 
-.navbar-nav {
-  height: auto;
-}
-
-@media screen and (max-width: 576px) {
-  .dropdown-menu {
-    background-color: #124880;
-  }
-  .dropdown-item {
-    color: #ffffff;
-  }
-}
-
 .solid {
   background-color: #124880;
 }
@@ -237,7 +194,58 @@ header {
   margin: auto;
 }
 
-/* Button */
+/* Navbar Media Queries */
+@media screen and (min-width: 768px) {
+  .navbar {
+    padding: 0;
+  }
+  .navbar-nav {
+    height: 75vh;
+  }
+  .nav-item {
+    margin: auto;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .navbar {
+    padding: 0;
+  }
+  .navbar-nav {
+    height: auto;
+  }
+  .nav-item {
+    width: 150px;
+    height: 70px;
+    text-align: center;
+    font-size: 1em;
+    margin: auto 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .nav-item:hover {
+    background-color: #0f3b6a;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .dropdown-menu {
+    background-color: #124880;
+  }
+  .dropdown-item {
+    color: #ffffff;
+  }
+}
+
+/*-------------------- BUTTON --------------------*/
+/* General Button CSS */
 .btn {
   border-radius: 10px;
 }
@@ -251,7 +259,9 @@ header {
   color: #ffffff;
 }
 
-/* Bienvenida */
+/*------------------ BIENVENIDA ------------------*/
+/* General Bienvenida CSS */
+/* Bienvenida Media Queries */
 @media screen and (min-width: 576px) {
   .slogan {
     font-size: 25px;
@@ -259,7 +269,8 @@ header {
   }
 }
 
-/* Index */
+/*----------------- INDEX -----------------*/
+/* General Index CSS */
 .index {
   z-index: 0;
 }
@@ -286,13 +297,15 @@ header {
           transform: skew(33deg);
 }
 
+/* Index Media Queries */
 @media screen and (max-width: 576px) {
   .index .view, .index img {
     height: 50vh;
   }
 }
 
-/* Sobre Nosotros */
+/*------------ SOBRE NOSOTROS ------------*/
+/*  Sobre Nosotros General CSS */
 .clientes {
   padding: 60px;
 }
@@ -327,6 +340,7 @@ header {
   top: 0;
 }
 
+/* Carousel Clientes Media Queries */
 @media screen and (min-width: 768px) {
   .about .img-title {
     position: relative;
@@ -415,7 +429,8 @@ header {
   }
 }
 
-/* Servicios */
+/*-------------- SERVICIOS --------------*/
+/*  Servicios General CSS */
 .services .card-title {
   padding-top: 10px;
   color: #124880;
@@ -433,16 +448,13 @@ header {
   padding: 20px;
 }
 
-.fab {
-  padding: 20px 0;
-}
-
 /* Clientes */
 .clientes {
   min-height: 60vh;
 }
 
-/* Blog */
+/*---------------- BLOG ----------------*/
+/* Blog General CSS */
 .blog .card-body {
   padding: 1.875rem;
 }
@@ -477,6 +489,7 @@ header {
   font-size: 1.2em;
 }
 
+/* Articulo Media Queries */
 @media screen and (min-width: 576px) {
   .article .content-wrapper {
     padding-top: 5rem;
@@ -486,7 +499,8 @@ header {
   }
 }
 
-/* Articulo */
+/*----------- ARTICULO -----------*/
+/* Articulo General CSS */
 .article .view {
   height: 60vh;
 }
@@ -518,12 +532,14 @@ header {
   margin: auto;
 }
 
-/* Contacto */
+/*-------------- CONTACTO --------------*/
+/* Contacto General CSS */
 #message {
   min-height: 146px;
   max-height: 146px;
 }
 
+/* Contacto Media Queries */
 @media screen and (min-width: 576px) {
   .contact .section-img {
     position: fixed;
@@ -541,7 +557,8 @@ header {
   text-align: center;
 }
 
-/* Footer */
+/*----------- FOOTER -----------*/
+/* Footer General CSS */
 footer .footer-hr {
   height: 0.1875rem;
   background-color: #ffffff;
@@ -566,6 +583,6 @@ footer .footer-link {
 }
 
 footer .fab {
-  font-size: 2.5rem;
+  font-size: 40px;
 }
 /*# sourceMappingURL=style.css.map */
