--- a/css/style.sass
+++ b/css/style.sass
@@ -58,45 +58,6 @@ h5
 .bg-light-blue-5
     background-color: lighten($color-theme, 46%)
 
-/*------------------ SECTION ------------------*/
-
-/* General Section CSS */
-.section-wrapper 
-    margin-top: 160px
-    .view
-        width: 100%
-        height: 30vh
-        h1 
-            text-align: center
-            margin: auto
-            font-size: 40px
-.section-img 
-    width: 100vw
-    height: 100%  
-    position: fixed
-    object-fit: cover
-    overflow: hidden
-    z-index: -1
-.hr-section-title
-    height: 3px
-    background-color: $color-theme
-    width: 200px
-    margin: 10px auto
-    transform: skew(33deg)
-.section-content
-    background-color: lighten($color-theme,60% )
-    .content-wrapper 
-        max-width: 1000px
-        margin: auto
-        padding: 60px 40px
-        p 
-            color: #263238
-            text-align: justify
-.content-h2
-    font-weight: bold
-    padding: 30px 0
-
-
 /*-------------------- LOGO --------------------*/  
 
 /* General Logo CSS */
@@ -136,6 +97,7 @@ header
     background-color: aliceblue 
     width: 80% 
     margin: auto
+
 /* Navbar Media Queries */
 @media screen and (min-width: 768px)
     .navbar
@@ -169,7 +131,7 @@ header
 
 /*-------------------- BUTTON --------------------*/ 
 
-/* General Button CSS */
+ /* General Button CSS */
 .btn 
     border-radius: 10px
 .btn-theme
@@ -190,7 +152,7 @@ header
     
 /*----------------- INDEX -----------------*/
 
-/* General Index CSS */
+ /* General Index CSS */
 .index
     z-index: 0
     .view
@@ -303,10 +265,9 @@ header
             position: absolute
             top: -300px
 
-
 /*-------------- SERVICIOS --------------*/
 
-/*  Servicios General CSS */
+ /*  Servicios General CSS */
 .services 
     .card-title
         padding-top: 10px
@@ -382,26 +343,34 @@ header
     margin: auto
 
 
-
 /*-------------- CONTACTO --------------*/
 
-/* Contacto General CSS */
-#message
-    min-height: 146px
-    max-height: 146px
+ /* Contacto General CSS */
+.section-content
+    
+    &__pregunta-contacto
+        font-size: 20px
+        text-align: justify
+    &__map-container
+        height: 40vh
+
+.md-textarea
+    min-height: 200px
+    max-height: 200px
+
+.form-label
+    font-size: 1em
 
 /* Contacto Media Queries */
 @media screen and (min-width: 576px)
+    .section-content__pregunta-contacto
+        font-size: 25px
+@media screen and (min-width: 776px)
     .contact
         .section-img 
             position: fixed
-            top: 0
-.contact-information
-    height: 65vh
-.pregunta-contacto
-    font-size: 1.25rem
-    font-weight: bold
-    text-align: center
+            top: -200px
+
 
 /*----------- FOOTER -----------*/
 
@@ -422,3 +391,47 @@ footer
         font-size: 1.125rem
     .fab
         font-size: 40px
+
+/*------------------ SECTION ------------------*/
+
+/* General Section CSS */
+.main
+    margin-top: 160px
+    .view
+        width: 100%
+        height: 30vh
+        h1 
+            text-align: center
+            margin: auto
+            font-size: 40px
+.section-img 
+    width: 100vw
+    height: 100vh  
+    position: fixed
+    object-fit: cover
+    overflow: hidden
+    z-index: -1
+.hr-section-title
+    height: 3px
+    background-color: $color-theme
+    width: 200px
+    margin: 10px auto
+    transform: skew(33deg)
+.section-content
+    .content-wrapper 
+        margin: auto
+        padding: 60px 40px
+        p 
+            color: #263238
+            text-align: justify
+.content-h2
+    font-weight: bold
+    padding: 30px 0
+
+/* Section Media Queries */
+@media screen and (min-width: 576px) //section wrapper
+    .section-wrapper
+        .view
+            height: 50vh
+        .section-image
+            height: 50vh
