--- a/css/style.sass
+++ b/css/style.sass
@@ -232,7 +232,8 @@ header
         width: 100%
         height: 100vh
         margin: auto
-
+    .clientes
+        height: auto
         .susimpatica
             width: 200px
         .adidas
@@ -264,7 +265,8 @@ header
             height: 100vh
             position: absolute
             top: -300px
-
+    .clientes
+        height: auto
 /*-------------- SERVICIOS --------------*/
 
  /*  Servicios General CSS */
