--- a/css/style.sass
+++ b/css/style.sass
@@ -179,9 +179,14 @@ header
 /*------------ SOBRE NOSOTROS ------------*/
 
 /*  Sobre Nosotros General CSS */
+
 .clientes
     padding: 60px
+    min-height: 60vh
+    margin: auto
+
 .carousel
+    margin: auto
     .active 
         border-bottom: 0
     .carousel-item
@@ -283,9 +288,6 @@ header
     .card-text 
         padding: 20px
 
-/* Clientes */
-.clientes
-    min-height: 60vh
 
 
 /*---------------- BLOG ----------------*/
