--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ header {
     padding: 0;
   }
   .navbar-nav {
-    height: 75vh;
+    height: 72vh;
   }
   .nav-item {
     margin: auto;
@@ -160,7 +160,7 @@ header {
   }
   .nav-item {
     width: 150px;
-    height: 70px;
+    height: 75px;
     text-align: center;
     font-size: 1em;
     margin: auto 0;
@@ -483,6 +483,13 @@ header {
 }
 
 .section-content__map-container {
+  padding: 0;
+  margin: 0;
+  height: 40vh;
+}
+
+.section-content__map-container .g-maps {
+  width: 100%;
   height: 40vh;
 }
 
@@ -505,7 +512,7 @@ header {
 @media screen and (min-width: 776px) {
   .contact .section-img {
     position: fixed;
-    top: -200px;
+    top: -300;
   }
 }
 
@@ -556,8 +563,8 @@ footer .fab {
 }
 
 .section-img {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: fixed;
   -o-object-fit: cover;
      object-fit: cover;
@@ -587,15 +594,5 @@ footer .fab {
 .content-h2 {
   font-weight: bold;
   padding: 30px 0;
-}
-
-/* Section Media Queries */
-@media screen and (min-width: 576px) {
-  .section-wrapper .view {
-    height: 50vh;
-  }
-  .section-wrapper .section-image {
-    height: 50vh;
-  }
 }
 /*# sourceMappingURL=style.css.map */
