--- a/scss/theme/_variables.sass
+++ b/scss/theme/_variables.sass
@@ -9,3 +9,14 @@ $bg-navbar: transparent
 $background-navbar-logo: transparent
 $text-navbar: red
 
+//====== Index ===========//
+
+//landscape
+$index-card-height-sm: 63vh
+//tablet
+$index-card-height-md: 42.5vh
+//laptop
+$index-card-height-lg: 44.5vh
+//desktop
+$index-card-height-xl: 42vh
+
