--- a/scss/theme/_index.sass
+++ b/scss/theme/_index.sass
@@ -1,22 +1,45 @@
 /*========================= INDEX =========================*/
 
+
+
 .index
     z-index: 0
     .view
-        height: 50vh
+        height: 80vh
+         /* Portrait */
         @media screen and (min-width: 576px)
-            height: 40vh
-    .btn 
-        margin-top: 20px   
-    img 
-        height: 50vh
+            height: $index-card-height-sm
+        /* Tablet */
+        @media screen and (min-width: 768px)
+            height: $index-card-height-md
+        /* Laptop */
+        @media screen and (min-width: 1024px)
+            height: $index-card-height-lg
+        /* Desktop */
+        @media screen and (min-width: 1280px)
+            height: $index-card-height-xl
+
+    .index__img 
+        height: 100%
         object-fit: cover
+        /* Landscape */
         @media screen and (min-width: 576px)
-            height: 40vh
+            height: $index-card-height-sm
+        /* Tablet */
+        @media screen and (min-width: 768px)
+            height: $index-card-height-md
+        /* Laptop */
+        @media screen and (min-width: 1024px)
+            height: $index-card-height-lg
+        /* Desktop */
+        @media screen and (min-width: 1280px)
+            height: $index-card-height-xl
+    .btn 
 .hr-card
     height: 3px
     background-color: $color-theme
     width: 200px
     transform: skew(33deg)
+        
 
 
