--- a/scss/theme/_article.sass
+++ b/scss/theme/_article.sass
@@ -1,23 +1,46 @@
 /*----------- ARTICULO -----------*/
 
-$article-title-image-height : 50vh
+$article-title-image-height : 35vh
 
 /* Articulo General CSS */
 .article
     .view, .section-img
         height: $article-title-image-height
-        .section-img
-            object-fit: cover
-.texto-articulo
+        /* Portrait */
+        @media screen and (min-width: 576px)
+            height: $article-title-image-height
+        /* Landscape */
+        @media screen and (min-width: 768px)
+            height: $article-title-image-height
+        /* Laptop */
+        @media screen and (min-width: 1024px)
+            height: $article-title-image-height
+        /* Desktop */
+        @media screen and (min-width: 1280px)
+            height: 50vh
+
+    .section-img
+        object-fit: cover
+.section-title__text
     position: absolute
-    top: 30vh
+    top: 60px
     width: 48vw
     left: 26vw
     right: 26vw
     height: 40vh
-.titulo-texto 
+     /* Landscape */
+    @media screen and (min-width: 768px)
+        top: 120px
+    /* Laptop */
+    @media screen and (min-width: 1024px)
+        top: 200px
+    /* Desktop */
+    @media screen and (min-width: 1280px)
+        top: 200px
+
+.section-title__text-title
     font-size: 2em
-.articulo-subtitle
+.section-title__text-subtitle
     font-size: 1em
 .modal 
     margin: auto
