--- a/scss/theme/1-Settings/_variables.sass
+++ b/scss/theme/1-Settings/_variables.sass
@@ -9,7 +9,7 @@ $bg-navbar: transparent
 $background-navbar-logo: transparent
 $text-navbar: red
 
-//====== Index ===========//
+//========= Index ===========//
 
 //landscape
 $index-card-height-sm: 63vh
