--- a/scss/theme/style.sass
+++ b/scss/theme/style.sass
@@ -1,19 +1,30 @@
-//Imports
-@import 'variables'
-@import 'colors'
-@import 'general'
-@import 'section'
-@import 'button'
-@import 'header'
-@import 'welcome'
-@import 'index'
-@import 'about'
-@import 'clientes'
-@import 'services'
-@import 'blog'
-@import 'article'
-@import 'contacto'
-@import 'footer'
+//-------------------  ITCSS -------------------//
 
-//Fonts
+// 1-Settings
+@import '1-Settings/variables','1-Settings/colors'
 @import url('https://fonts.googleapis.com/css?family=Raleway&display=swap')
+
+// 2-Tools
+@import '2-Tools/tools'
+
+// 3-Generic
+@import '3-Generic/reset'
+
+// 4-Tags (Elements)
+@import '4-Elements/tags'
+
+// 5-Objects
+@import '5-Objects/section'
+
+// 6-Components
+@import '6-Components/header','6-Components/header','6-Components/general','6-Components/welcome','6-Components/index','6-Components/about','6-Components/clientes','6-Components/services','6-Components/blog','6-Components/article','6-Components/contacto','6-Components/footer'
+
+// 7-Keyframes
+@import '7-Keyframes/keyframes'
+
+// 8-Utilities
+@import '8-Utilities/utilities'
+
+
+
+
