--- a/scss/theme/style.sass
+++ b/scss/theme/style.sass
@@ -1,7 +1,8 @@
 //-------------------  ITCSS -------------------//
 
 // 1-Settings
-@import '1-Settings/variables','1-Settings/colors'
+@import '1-Settings/variables'
+@import '1-Settings/colors'
 @import url('https://fonts.googleapis.com/css?family=Raleway&display=swap')
 
 // 2-Tools
