section / contact changes

--- a/scss/theme/6-Components/_contacto.sass
+++ b/scss/theme/6-Components/_contacto.sass
@@ -8,6 +8,9 @@
         @media screen and (min-width: 1024px) 
             position: fixed
             top: 0
+        @media screen and (min-width: 1280px)
+            position: fixed
+            top: -200px
 
 
 .section-content //Seccion Contenido
@@ -32,7 +35,4 @@
 .form-label //tamaño texto de cada campo del form
     font-size: 1em
 
-/* Contacto Media Queries */
 
-
-    
