--- a/scss/theme/5-Objects/_section.sass
+++ b/scss/theme/5-Objects/_section.sass
@@ -5,10 +5,10 @@
         width: 100%
         height: 30vh
         @media screen and (min-width:576px)
-            height: 40vh
+            height: 50vh
 .section-img 
     width: 100%
-    height: 100vh
+    height: 100%
     position: fixed
     object-fit: cover
     overflow: hidden
@@ -19,13 +19,13 @@
     width: 200px
     margin: 10px auto
     transform: skew(33deg)
-.section-content
-    .content-wrapper 
-        margin: auto
-        padding: 60px 40px
-        p 
-            color: #263238
-            text-align: justify
+
+.content-wrapper 
+    margin: auto
+    padding: 60px 40px
+    p 
+        color: #263238
+        text-align: justify
 .content-h2
     font-weight: bold
     padding: 30px 0
