--- a/scss/theme/1-Settings/_colors.sass
+++ b/scss/theme/1-Settings/_colors.sass
@@ -1,20 +1,29 @@
+
 /*==================== COLORES ====================*/
     
-.color-theme 
-    background-color: $color-theme
-.text-theme
-    color: $color-theme
-.bg-light-blue-1
-    background-color: lighten($color-theme,58%)
-.bg-light-blue-2
-    background-color: lighten($color-theme,55%)
-.bg-light-blue-3
-    background-color: lighten($color-theme,52%)
-.bg-light-blue-4
-    background-color: lighten($color-theme,49%)
-.bg-light-blue-5
-    background-color: lighten($color-theme,46%)
-.bg-light-blue-6
-    background-color: lighten($color-theme,43%)
-.bg-light-blue-7
-    background-color: lighten($color-theme,40%)
+.s-color-theme 
+    background-color: $s-color-theme
+
+.s-text-theme
+    color: $s-text-theme
+
+.s-color-theme-1
+    background-color: lighten($s-color-theme,58%)
+
+.s-color-theme-2
+    background-color: lighten($s-color-theme,55%)
+
+.s-color-theme-3
+    background-color: lighten($s-color-theme,52%)
+
+.s-color-theme-4
+    background-color: lighten($s-color-theme,49%)
+
+.s-color-theme-5
+    background-color: lighten($s-color-theme,46%)
+
+.s-color-theme-6
+    background-color: lighten($s-color-theme,43%)
+
+.s-color-theme-7
+    background-color: lighten($s-color-theme,40%)
