--- a/scss/theme/1-Settings/_variables.sass
+++ b/scss/theme/1-Settings/_variables.sass
@@ -1,22 +1,22 @@
 /*================== VARIABLES ==================*/
 
 //Colores
-$text-theme: #124880 
-$color-theme: #124880
+$s-text-theme: #124880 
+$s-color-theme: #124880
 
 //Navbar
-$bg-navbar: transparent
-$background-navbar-logo: transparent
-$text-navbar: red
+$s-bg-navbar: transparent
+$s-background-navbar-logo: transparent
+$s-text-navbar: #ffffff
 
 //========= Index ===========//
 
 //landscape
-$index-card-height-sm: 63vh
+$s-index-card-height-sm: 63vh
 //tablet
-$index-card-height-md: 42.5vh
+$s-index-card-height-md: 42.5vh
 //laptop
-$index-card-height-lg: 44.5vh
+$s-index-card-height-lg: 44.5vh
 //desktop
-$index-card-height-xl: 42vh
+$s-index-card-height-xl: 42vh
 
