--- a/scss/theme/6-Components/_article.sass
+++ b/scss/theme/6-Components/_article.sass
@@ -4,7 +4,7 @@ $article-title-image-height : 35vh
 
 /* Articulo General CSS */
 .article
-    .view, .main-view-img
+    .view, .o-main-view-img
         height: $article-title-image-height
         /* Portrait */
         @media screen and (min-width: 576px)
@@ -19,9 +19,9 @@ $article-title-image-height : 35vh
         @media screen and (min-width: 1280px)
             height: 50vh
 
-    .section-img
+    .o-section-title__section-img
         object-fit: cover
-.main-view__text
+.o-main-view__text
     position: absolute
     top: 60px
     width: 48vw
@@ -38,11 +38,11 @@ $article-title-image-height : 35vh
     @media screen and (min-width: 1280px)
         top: 200px
 
-.main-view__text-title
+.o-main-view__text-title
     font-size: 2em
-.main-view__text-subtitle
+.o-main-view__text-subtitle
     font-size: 1em
 .modal 
     margin: auto
-.section-content__img
+o-section-content__img
     cursor: pointer
