--- a/scss/theme/6-Components/_blog.sass
+++ b/scss/theme/6-Components/_blog.sass
@@ -6,7 +6,7 @@
         object-fit: cover
     .blog-subtitle
         font-size: 0.8rem
-    .content-wrapper
+    .o-section-content-wrapper
         min-height: 24vh
         .card-body
         padding: 1.875rem
