--- a/scss/theme/6-Components/_clientes.sass
+++ b/scss/theme/6-Components/_clientes.sass
@@ -24,7 +24,7 @@
         display: flex
         align-items: center
         justify-content: center
-        background-color: lighten($color-theme,50%)
+        background-color: lighten($s-color-theme,50%)
         border-radius: 10px
         height: 300px
         
