--- a/scss/theme/6-Components/_contacto.sass
+++ b/scss/theme/6-Components/_contacto.sass
@@ -1,7 +1,7 @@
 /*==================== CONTACTO ====================*/
 .contact
 
-    .section-img //Imagen de fondo Titulo
+    .o-section-title__section-img //Imagen de fondo Titulo
         @media screen and (min-width: 776px) 
             position: fixed
             top: -100px
@@ -13,14 +13,14 @@
             top: -200px
 
 
-.section-content //Seccion Contenido
+.o-section-content-wrapper //Seccion Contenido
     
     &__pregunta-contacto
         font-size: 20px
         text-align: justify
         @media screen and (min-width: 576px)
             font-size: 25px
-    &__map-container
+    &__map-container-contacto
         padding: 0
         margin: 0
         height: 40vh
