--- a/scss/theme/6-Components/_header.sass
+++ b/scss/theme/6-Components/_header.sass
@@ -1,13 +1,13 @@
 /* =========================== HEADER ============================= */
 
 header 
-    background-color: $bg-navbar
+    background-color: $s-bg-navbar
 
 .bg-logo
-    background-color: $background-navbar-logo
+    background-color: $s-background-navbar-logo
 
 .navbar 
-    background-color: $bg-navbar
+    background-color: $s-bg-navbar
     padding: 20px
     @media screen and (min-width: 768px)
         padding: 0
@@ -36,16 +36,16 @@ header
         align-items: center
         justify-content: center
         &:hover
-            background-color: darken($color-theme, 5%)
+            background-color: darken($s-color-theme, 5%)
 
 .text-navbar
-    color: $text-navbar
+    color: $s-text-navbar
 
 .active 
     border-bottom: 2px solid #ffffff
 
 .info
-    background-color: darken($color-theme, 5%)
+    background-color: darken($s-color-theme, 5%)
 
 .txt-banner
     color: #ffffff
@@ -58,7 +58,7 @@ header
     height: 20px
 
 .solid 
-    background-color: $color-theme
+    background-color: $s-color-theme
 
 .hr-header
     height: 2px
@@ -68,7 +68,7 @@ header
 
 .dropdown-menu
     @media screen and (max-width: 576px)
-        background-color: $color-theme
+        background-color: $s-color-theme
 
 .dropdown-item
     @media screen and (max-width: 576px)
