--- a/scss/theme/6-Components/_index.sass
+++ b/scss/theme/6-Components/_index.sass
@@ -8,36 +8,36 @@
         height: 80vh
          /* Portrait */
         @media screen and (min-width: 576px)
-            height: $index-card-height-sm
+            height: $s-index-card-height-sm
         /* Tablet */
         @media screen and (min-width: 768px)
-            height: $index-card-height-md
+            height: $s-index-card-height-md
         /* Laptop */
         @media screen and (min-width: 1024px)
-            height: $index-card-height-lg
+            height: $s-index-card-height-lg
         /* Desktop */
         @media screen and (min-width: 1280px)
-            height: $index-card-height-xl
+            height: $s-index-card-height-xl
 
     .index__img 
         height: 100%
         object-fit: cover
         /* Landscape */
         @media screen and (min-width: 576px)
-            height: $index-card-height-sm
+            height: $s-index-card-height-sm
         /* Tablet */
         @media screen and (min-width: 768px)
-            height: $index-card-height-md
+            height: $s-index-card-height-md
         /* Laptop */
         @media screen and (min-width: 1024px)
-            height: $index-card-height-lg
+            height: $s-index-card-height-lg
         /* Desktop */
         @media screen and (min-width: 1280px)
-            height: $index-card-height-xl
+            height: $s-index-card-height-xl
     .btn 
 .hr-card
     height: 3px
-    background-color: $color-theme
+    background-color: $s-color-theme
     width: 200px
     transform: skew(33deg)
         
