--- a/scss/theme/6-Components/_services.sass
+++ b/scss/theme/6-Components/_services.sass
@@ -3,7 +3,7 @@
 .services 
     .card-title
         padding-top: 10px
-        color: $color-theme
+        color: $s-color-theme
         text-align: center
     .responsivo
         img 
