--- a/scss/theme/5-Objects/_button.sass
+++ b/scss/theme/5-Objects/_button.sass
@@ -1,11 +1,9 @@
 /*======================= BUTTON =======================*/ 
 
-.btn 
+.o-btn-theme
     border-radius: 10px
     color: #ffffff
     margin-top: 30px
     &:hover 
-        color: #ffffff
-        
-.btn-theme
-    background-color: $color-theme
+    color: #ffffff
+    background-color: $s-color-theme
