--- a/scss/theme/5-Objects/_section.sass
+++ b/scss/theme/5-Objects/_section.sass
@@ -1,32 +1,47 @@
 
-.main
+.o-main
     margin-top: 160px
-    .view
+    .view //bootstrap view
         width: 100%
         height: 30vh
+        //Iphone x
+        @media screen and (max-width:375px)
+            height: 26vh
+        //Landscape
         @media screen and (min-width:576px)
+            height: 30vh
+        //Tablet
+        @media screen and (min-width:768px)
+            height: 40vh
+        //Laptop
+        @media screen and (min-width:1024px)
+            height: 38vh
+        //Desktop
+        @media screen and (min-width:1024px)
             height: 50vh
-.section-img 
+            
+.o-section-title__section-img 
     width: 100%
-    height: 100%
+    height: 100vh
     position: fixed
     object-fit: cover
     overflow: hidden
-    z-index: -1
-.hr-section-title
+    z-index: -1 //no mover
+
+.o-hr-section-title
     height: 3px
-    background-color: $color-theme
+    background-color: $s-color-theme
     width: 200px
     margin: 10px auto
     transform: skew(33deg)
 
-
-.content-wrapper 
+.o-section-content-wrapper
     margin: auto
     padding: 60px 40px
     p 
         color: #263238
         text-align: justify
-.content-h2
+.o-section-content__h2
     font-weight: bold
     padding: 30px 0
+
