--- a/scss/theme/style.sass
+++ b/scss/theme/style.sass
@@ -14,9 +14,10 @@
 
 // 5-Objects
 @import '5-Objects/section'
+@import '5-Objects/button'
 
 // 6-Components
-@import '6-Components/header','6-Components/header','6-Components/general','6-Components/welcome','6-Components/button','6-Components/index','6-Components/about','6-Components/clientes','6-Components/services','6-Components/blog','6-Components/article','6-Components/contacto','6-Components/footer'
+@import '6-Components/header','6-Components/general','6-Components/welcome','6-Components/index','6-Components/about','6-Components/clientes','6-Components/services','6-Components/blog','6-Components/article','6-Components/contacto','6-Components/footer'
 
 // 7-Keyframes
 @import '7-Keyframes/keyframes'
