--- a/scss/theme/6-Components/_index.sass
+++ b/scss/theme/6-Components/_index.sass
@@ -1,8 +1,6 @@
 /*========================= INDEX =========================*/
 
-
-
-.index
+.c-index
     z-index: 0
     .view
         height: 80vh
@@ -19,27 +17,24 @@
         @media screen and (min-width: 1280px)
             height: $s-index-card-height-xl
 
-    .index__img 
-        height: 100%
-        object-fit: cover
-        /* Landscape */
-        @media screen and (min-width: 576px)
-            height: $s-index-card-height-sm
-        /* Tablet */
-        @media screen and (min-width: 768px)
-            height: $s-index-card-height-md
-        /* Laptop */
-        @media screen and (min-width: 1024px)
-            height: $s-index-card-height-lg
-        /* Desktop */
-        @media screen and (min-width: 1280px)
-            height: $s-index-card-height-xl
-    .btn 
-.hr-card
-    height: 3px
-    background-color: $s-color-theme
-    width: 200px
-    transform: skew(33deg)
+.c-index__img
+    height: 100%
+    object-fit: cover
+
+    /* Landscape */
+    @media screen and (min-width: 576px)
+        height: $s-index-card-height-sm
+
+    /* Tablet */
+    @media screen and (min-width: 768px)
+        height: $s-index-card-height-md
+
+    /* Laptop */
+    @media screen and (min-width: 1024px)
+        height: $s-index-card-height-lg
         
+    /* Desktop */
+    @media screen and (min-width: 1280px)
+        height: $s-index-card-height-xl
 
 
