--- a/scss/theme/6-Components/_index.sass
+++ b/scss/theme/6-Components/_index.sass
@@ -17,24 +17,24 @@
         @media screen and (min-width: 1280px)
             height: $s-index-card-height-xl
 
-.c-index__img
-    height: 100%
-    object-fit: cover
+    &__img
+        height: 100%
+        object-fit: cover
 
-    /* Landscape */
-    @media screen and (min-width: 576px)
-        height: $s-index-card-height-sm
+        /* Landscape */
+        @media screen and (min-width: 576px)
+            height: $s-index-card-height-sm
 
-    /* Tablet */
-    @media screen and (min-width: 768px)
-        height: $s-index-card-height-md
+        /* Tablet */
+        @media screen and (min-width: 768px)
+            height: $s-index-card-height-md
 
-    /* Laptop */
-    @media screen and (min-width: 1024px)
-        height: $s-index-card-height-lg
-        
-    /* Desktop */
-    @media screen and (min-width: 1280px)
-        height: $s-index-card-height-xl
+        /* Laptop */
+        @media screen and (min-width: 1024px)
+            height: $s-index-card-height-lg
+            
+        /* Desktop */
+        @media screen and (min-width: 1280px)
+            height: $s-index-card-height-xl
 
 
