--- a/scss/theme/5-Objects/_section.sass
+++ b/scss/theme/5-Objects/_section.sass
@@ -20,36 +20,44 @@
         @media screen and (min-width:1024px)
             height: 50vh
             
-.o-section-title__section-img 
-    width: 100%
-    height: 100vh
-    position: fixed
-    object-fit: cover
-    overflow: hidden
-    z-index: -1 //no mover
+.o-section
+    &-title__section-img 
+        width: 100%
+        height: 100vh
+        position: fixed
+        object-fit: cover
+        overflow: hidden
+        z-index: -1 //no mover
 
-.o-section__hr
-    height: 3px
-    background-color: $s-color-theme
-    width: 200px
-    margin: auto
-    transform: skew(33deg)
+    &__hr
+        height: 3px
+        background-color: $s-color-theme
+        width: 200px
+        margin: auto
+        transform: skew(33deg)
 
-    &--left
-        margin: 10px auto 20px 0
-    &--right
-        margin: 10px 0 20px auto
-    &--center
-        margin: 10px auto 20px auto
+        &--left
+            margin: 10px auto 20px 0
+        &--right
+            margin: 10px 0 20px auto
+        &--center
+            margin: 10px auto 20px auto
     
-
-.o-section-content-wrapper
-    margin: auto
-    padding: 60px 40px
-    p 
-        color: #263238
-        text-align: justify
-.o-section-content__h2
-    font-weight: bold
-    padding: 30px 0
+    &-content
+        &-wrapper
+            margin: auto
+            padding: 60px 40px
+            p 
+                color: #263238
+                text-align: justify
+            &--blog
+                min-height: 24vh
+                .card-body
+                    padding: 1.875rem
+                p 
+                    margin-top: 60px
+                    padding: 10px 0
+        &__h2
+            font-weight: bold
+            padding: 30px 0
 
