--- a/scss/theme/6-Components/_blog.sass
+++ b/scss/theme/6-Components/_blog.sass
@@ -1,15 +1,7 @@
 /*---------------- BLOG ----------------*/
 
-.blog
-    .card-img-top
-        height: 200px
-        object-fit: cover
-    .blog-subtitle
-        font-size: 0.8rem
-    .o-section-content-wrapper
-        min-height: 24vh
-        .card-body
-        padding: 1.875rem
-        p 
-            margin-top: 60px
-            padding: 10px 0
+.card-img-top
+    height: 250px
+    object-fit: cover
+.card-body__subtitle
+    font-size: 0.8rem
