--- a/scss/theme/1-Settings/_variables.sass
+++ b/scss/theme/1-Settings/_variables.sass
@@ -20,3 +20,5 @@ $s-index-card-height-lg: 44.5vh
 //desktop
 $s-index-card-height-xl: 42vh
 
+//======= Article =======//
+$article-title-height : 10vh
