--- a/scss/theme/5-Objects/_section.sass
+++ b/scss/theme/5-Objects/_section.sass
@@ -1,39 +1,51 @@
 
-.o-main
+.o-section
     margin-top: 160px
+
     .view //bootstrap view
         width: 100%
         height: 30vh
-        //Iphone x
-        @media screen and (max-width:375px)
-            height: 26vh
-        //Landscape
-        @media screen and (min-width:576px)
-            height: 30vh
-        //Tablet
-        @media screen and (min-width:768px)
-            height: 40vh
-        //Laptop
-        @media screen and (min-width:1024px)
-            height: 38vh
-        //Desktop
-        @media screen and (min-width:1024px)
-            height: 50vh
-            
-.o-section
-    &-title__section-img 
-        width: 100%
-        height: 100vh
-        position: fixed
+    
+    &__img 
         object-fit: cover
-        overflow: hidden
         z-index: -1 //no mover
+
+        //Landscape
+        @media screen and (min-width: 576px)
+            position: absolute
+            top: 0
+        //Tablets
+        @media screen and (min-width: 768px)
+            position: absolute
+            top: 0
+        //Laptop
+        @media screen and (min-width: 1024px)
+            position: absolute
+            top: -200px
+        //Desktop
+        @media screen and (min-width: 1280px)
+            position: absolute
+            top: -200px
+
+    &__h1
+        color: #fff
+        //* Portrait */
+        @media screen and (min-width: 576px)
+            font-size: 1.2em
+        //* Landscape */
+        @media screen and (min-width: 768px)
+            font-size: 4em
+        //* Laptop */
+        @media screen and (min-width: 1024px)
+            font-size: 4em
+        //* Desktop */
+        @media screen and (min-width: 1280px)
+            font-size: 4em
 
     &__hr
         height: 3px
         background-color: $s-color-theme
-        width: 200px
-        margin: auto
+        width: 200px    
         transform: skew(33deg)
 
         &--left
@@ -41,7 +53,7 @@
         &--right
             margin: 10px 0 20px auto
         &--center
-            margin: 10px auto 20px auto
+        margin: 10px auto 20px auto
     
     &-content
         &-wrapper
