--- a/scss/theme/6-Components/_article.sass
+++ b/scss/theme/6-Components/_article.sass
@@ -1,48 +1,33 @@
 /*----------- ARTICULO -----------*/
 
-$article-title-image-height : 35vh
+$article-title-height : 35vh
 
 /* Articulo General CSS */
-.article
-    .view, .o-main-view-img
-        height: $article-title-image-height
-        /* Portrait */
-        @media screen and (min-width: 576px)
-            height: $article-title-image-height
-        /* Landscape */
-        @media screen and (min-width: 768px)
-            height: $article-title-image-height
-        /* Laptop */
-        @media screen and (min-width: 1024px)
-            height: $article-title-image-height
-        /* Desktop */
-        @media screen and (min-width: 1280px)
-            height: 50vh
 
-    .o-section-title__section-img
-        object-fit: cover
-.o-main-view__text
-    position: absolute
-    top: 60px
-    width: 48vw
-    left: 26vw
-    right: 26vw
-    height: 40vh
-     /* Landscape */
-    @media screen and (min-width: 768px)
-        top: 120px
-    /* Laptop */
-    @media screen and (min-width: 1024px)
-        top: 200px
-    /* Desktop */
-    @media screen and (min-width: 1280px)
-        top: 200px
 
-.o-main-view__text-title
-    font-size: 2em
-.o-main-view__text-subtitle
-    font-size: 1em
+.o-section
+
+        &__img
+            width: 100%
+            height: 100vh
+            position: fixed
+            object-fit: cover
+            overflow: hidden
+            z-index: -1 //no mover
+
+        &__h1
+            font-size: 2em
+
+        &__subtitle
+            font-size: 1em
+
 .modal 
     margin: auto
-o-section-content__img
-    cursor: pointer
+
+.o-section-content
+
+    &__img
+        cursor: pointer
+
+.o-section-pagination
+    margin: auto
